# Budget

./: .env.example  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py  prestart.py
backend/app/api/v1/: accounts.py  auth.py  budgets.py  categories.py  data.py  files.py  goals.py  reports.py  router.py  transactions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: accounts.py  auth.py  budgets.py  categories.py  goals.py  transactions.py
backend/app/scripts/: seed.py
backend/app/services/: audit.py
backend/app/utils/: deps.py
backend/tests/: test_auth.py
docs/: SETUP.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css  vite-env.d.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Accounts.tsx  App.tsx  Budgets.tsx  Dashboard.tsx  Login.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
